// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-compliance - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Run Azure compliance and security audits with azqr plus Key Vault expiration checks. Covers best-practice assessment, resource review, policy/compliance validation, and security posture checks. WHEN: compliance scan, security audit, BEFORE running azqr (compliance cli tool), Azure best practices, Key Vault expiration check, expired certificates, expiring secrets, orphaned resources, compliance assessment.",
  "extractedKeywords": [
    "assessment",
    "audit",
    "audits",
    "authentication",
    "azqr",
    "azure",
    "best",
    "best-practice",
    "certificates",
    "check",
    "checks",
    "compliance",
    "covers",
    "expiration",
    "expired",
    "expiring",
    "key vault",
    "keyvault",
    "mcp",
    "monitor",
    "orphaned",
    "plus",
    "policy",
    "posture",
    "practices",
    "resource",
    "resources",
    "review",
    "scan",
    "secrets",
    "security",
    "validation",
    "vault",
    "when",
    "with",
  ],
  "name": "azure-compliance",
}
`;

exports[`azure-compliance - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "assessment",
  "audit",
  "audits",
  "authentication",
  "azqr",
  "azure",
  "best",
  "best-practice",
  "certificates",
  "check",
  "checks",
  "compliance",
  "covers",
  "expiration",
  "expired",
  "expiring",
  "key vault",
  "keyvault",
  "mcp",
  "monitor",
  "orphaned",
  "plus",
  "policy",
  "posture",
  "practices",
  "resource",
  "resources",
  "review",
  "scan",
  "secrets",
  "security",
  "validation",
  "vault",
  "when",
  "with",
]
`;
